JCompiler/yacc.output
Terminals which are not used

   ANNOTATION
   BYVALUE
   CAST
   CONST
   ERROR
   STATEMENT
   FUTURE
   GENERIC
   GOTO
   INNER
   OPERATOR
   OUTER
   REST
   STRICTFP
   VAR
   METHOD
   FIELD


Grammar

    0 $accept: CompilationUnit ENDF

    1 TypeSpecifier: TypeName
    2              | TypeName Dims

    3 TypeName: PrimitiveType
    4         | QualifiedName

    5 ClassNameList: QualifiedName
    6              | ClassNameList ',' QualifiedName

    7 PrimitiveType: BOOLEAN
    8              | CHAR
    9              | BYTE
   10              | SHORT
   11              | INT
   12              | LONG
   13              | FLOAT
   14              | DOUBLE
   15              | VOID
   16              | STRING

   17 SemiColons: ';'
   18           | SemiColons ';'

   19 CompilationUnit: ProgramFile ENDF

   20 ProgramFile: PackageStatement ImportStatements TypeDeclarations
   21            | PackageStatement ImportStatements
   22            | PackageStatement TypeDeclarations
   23            | ImportStatements TypeDeclarations
   24            | PackageStatement
   25            | ImportStatements
   26            | TypeDeclarations

   27 PackageStatement: PACKAGE QualifiedName SemiColons
   28                 | PACKAGE error

   29 TypeDeclarations: TypeDeclarationOptSemi
   30                 | TypeDeclarations TypeDeclarationOptSemi

   31 TypeDeclarationOptSemi: TypeDeclaration
   32                       | TypeDeclaration SemiColons
   33                       | ClassHeader

   34 ImportStatements: ImportStatement
   35                 | error
   36                 | ImportStatements ImportStatement
   37                 | ImportStatements error

   38 ImportStatement: IMPORT QualifiedName SemiColons
   39                | IMPORT QualifiedName '.' '*' SemiColons

   40 QualifiedName: IDENTIFIER
   41              | QualifiedName '.' IDENTIFIER

   42 TypeDeclaration: ClassHeader '{' FieldDeclarations '}'
   43                | ClassHeader '{' FieldDeclarations ENDF
   44                | ClassHeader '{' '}'
   45                | ClassHeader '{' ENDF
   46                | ClassHeader error FieldDeclarations '}'
   47                | ClassHeader error FieldDeclarations ENDF
   48                | ClassHeader '}'

   49 ClassHeader: Modifiers ClassWord IDENTIFIER Extends Interfaces
   50            | Modifiers ClassWord IDENTIFIER Extends
   51            | Modifiers ClassWord IDENTIFIER Interfaces
   52            | ClassWord IDENTIFIER Extends Interfaces
   53            | Modifiers ClassWord IDENTIFIER
   54            | ClassWord IDENTIFIER Extends
   55            | ClassWord IDENTIFIER Interfaces
   56            | ClassWord IDENTIFIER
   57            | Modifiers ClassWord error
   58            | ClassWord error

   59 Modifiers: Modifier
   60          | Modifiers Modifier

   61 Modifier: ABSTRACT
   62         | FINAL
   63         | PUBLIC
   64         | PROTECTED
   65         | PRIVATE
   66         | STATIC
   67         | TRANSIENT
   68         | VOLATILE
   69         | NATIVE
   70         | SYNCHRONIZED

   71 ClassWord: CLASS
   72          | INTERFACE

   73 Interfaces: IMPLEMENTS ClassNameList

   74 FieldDeclarations: FieldDeclarationOptSemi
   75                  | FieldDeclarations FieldDeclarationOptSemi

   76 FieldDeclarationOptSemi: FieldDeclaration
   77                        | FieldDeclaration SemiColons

   78 FieldDeclaration: FieldVariableDeclaration ';'
   79                 | MethodDeclaration
   80                 | ConstructorDeclaration
   81                 | StaticInitializer
   82                 | NonStaticInitializer
   83                 | TypeDeclaration
   84                 | error

   85 FieldVariableDeclaration: Modifiers TypeSpecifier VariableDeclarators
   86                         | TypeSpecifier VariableDeclarators

   87 VariableDeclarators: VariableDeclarator
   88                    | VariableDeclarators ',' VariableDeclarator

   89 VariableDeclarator: DeclaratorName
   90                   | DeclaratorName '=' VariableInitializer

   91 VariableInitializer: Expression
   92                    | '{' '}'
   93                    | '{' ArrayInitializers '}'

   94 ArrayInitializers: VariableInitializer
   95                  | ArrayInitializers ',' VariableInitializer

   96 MethodDeclaration: Modifiers TypeSpecifier MethodDeclarator Throws MethodBody
   97                  | Modifiers TypeSpecifier MethodDeclarator MethodBody
   98                  | TypeSpecifier MethodDeclarator Throws MethodBody
   99                  | TypeSpecifier MethodDeclarator MethodBody
  100                  | TypeSpecifier MethodDeclarator '{' LocalVariableDeclarationsAndStatements ENDF
  101                  | Modifiers TypeSpecifier MethodDeclarator '{' LocalVariableDeclarationsAndStatements ENDF
  102                  | Modifiers TypeSpecifier MethodDeclarator Throws '{' LocalVariableDeclarationsAndStatements ENDF
  103                  | TypeSpecifier MethodDeclarator Throws '{' LocalVariableDeclarationsAndStatements ENDF

  104 MethodDeclarator: DeclaratorName '(' ParameterList ')'
  105                 | DeclaratorName '(' ParameterList error
  106                 | DeclaratorName '(' ')'
  107                 | DeclaratorName '(' error

  108 ParameterList: Parameter
  109              | ParameterList ',' Parameter

  110 Parameter: TypeSpecifier VariableDeclarator
  111          | FINAL TypeSpecifier VariableDeclarator

  112 DeclaratorName: IDENTIFIER
  113               | DeclaratorName OP_DIM

  114 Throws: THROWS ClassNameList

  115 MethodBody: Block
  116           | WrongBlock
  117           | ';'

  118 ConstructorDeclaration: Modifiers ConstructorDeclarator Throws AnyBlock
  119                       | Modifiers ConstructorDeclarator AnyBlock
  120                       | ConstructorDeclarator Throws AnyBlock
  121                       | ConstructorDeclarator AnyBlock
  122                       | Modifiers ConstructorDeclarator Throws '{' LocalVariableDeclarationsAndStatements ENDF
  123                       | Modifiers ConstructorDeclarator '{' LocalVariableDeclarationsAndStatements ENDF
  124                       | ConstructorDeclarator Throws '{' LocalVariableDeclarationsAndStatements ENDF
  125                       | ConstructorDeclarator '{' LocalVariableDeclarationsAndStatements ENDF

  126 ConstructorDeclarator: IDENTIFIER '(' ParameterList ')'
  127                      | IDENTIFIER '(' ')'

  128 StaticInitializer: STATIC Block
  129                  | STATIC '{' ENDF
  130                  | STATIC '{' LocalVariableDeclarationsAndStatements ENDF

  131 NonStaticInitializer: Block
  132                     | '{' ENDF
  133                     | '{' LocalVariableDeclarationsAndStatements ENDF

  134 Extends: EXTENDS ClassNameList

  135 AnyBlock: Block
  136         | WrongBlock

  137 Block: '{' LocalVariableDeclarationsAndStatements '}'
  138      | '{' '}'

  139 WrongBlock: error LocalVariableDeclarationsAndStatements '}'
  140           | error LocalVariableDeclarationsAndStatements ENDF
  141           | error '}'
  142           | error ENDF
  143           | '{' ENDF

  144 LocalVariableDeclarationsAndStatements: LocalVariableDeclarationOrStatement
  145                                       | LocalVariableDeclarationsAndStatements LocalVariableDeclarationOrStatement

  146 LocalVariableDeclarationOrStatement: LocalVariableDeclarationStatement
  147                                    | Statement
  148                                    | error

  149 LocalVariableDeclarationStatement: TypeSpecifier VariableDeclarators ';'
  150                                  | FINAL TypeSpecifier VariableDeclarators ';'

  151 Statement: EmptyStatement
  152          | LabelStatement
  153          | ExpressionStatement ';'
  154          | SelectionStatement
  155          | IterationStatement
  156          | JumpStatement
  157          | GuardingStatement
  158          | Block
  159          | PrintStatement

  160 PrintStatement: PRINT '(' Expression ')'

  161 EmptyStatement: ';'

  162 LabelStatement: IDENTIFIER ':'
  163               | CASE ConstantExpression ':'
  164               | DEFAULT ':'

  165 ExpressionStatement: Expression

  166 SelectionStatement: IF '(' Expression ')' Statement
  167                   | IF '(' Expression ')' Statement ELSE Statement
  168                   | SWITCH '(' Expression ')' Block

  169 IterationStatement: WHILE '(' Expression ')' Statement
  170                   | DO Statement WHILE '(' Expression ')' ';'
  171                   | FOR '(' ForInit ForExpr ForIncr ')' Statement
  172                   | FOR '(' ForInit ForExpr ')' Statement
  173                   | FOR '(' TypeSpecifier IDENTIFIER ':' Expression ')' Statement

  174 ForInit: ExpressionStatements ';'
  175        | LocalVariableDeclarationStatement
  176        | ';'

  177 ForExpr: Expression ';'
  178        | ';'

  179 ForIncr: ExpressionStatements

  180 ExpressionStatements: ExpressionStatement
  181                     | ExpressionStatements ',' ExpressionStatement

  182 JumpStatement: BREAK IDENTIFIER ';'
  183              | BREAK ';'
  184              | CONTINUE IDENTIFIER ';'
  185              | CONTINUE ';'
  186              | RETURN Expression ';'
  187              | RETURN ';'
  188              | THROW Expression ';'

  189 GuardingStatement: SYNCHRONIZED '(' Expression ')' Statement
  190                  | TRY Block Finally
  191                  | TRY Block Catches
  192                  | TRY Block Catches Finally

  193 Catches: Catch
  194        | Catches Catch

  195 Catch: CatchHeader Block

  196 CatchHeader: CATCH '(' TypeSpecifier IDENTIFIER ')'
  197            | CATCH '(' TypeSpecifier ')'

  198 Finally: FINALLY Block

  199 PrimaryExpression: QualifiedName
  200                  | NotJustName

  201 NotJustName: SpecialName
  202            | NewAllocationExpression
  203            | ComplexPrimary

  204 ComplexPrimary: '(' Expression ')'
  205               | ComplexPrimaryNoParenthesis

  206 ComplexPrimaryNoParenthesis: Literals
  207                            | ArrayAccess
  208                            | FieldAccess
  209                            | MethodCall
  210                            | NewInner

  211 Literals: INT_LITERAL
  212         | LONG_LITERAL
  213         | DOUBLE_LITERAL
  214         | FLOAT_LITERAL
  215         | STRING_LITERAL
  216         | CHAR_LITERAL
  217         | BOOLLIT

  218 ArrayAccess: QualifiedName '[' Expression ']'
  219            | ComplexPrimary '[' Expression ']'

  220 FieldAccess: NotJustName '.' IDENTIFIER
  221            | RealPostfixExpression '.' IDENTIFIER
  222            | QualifiedName '.' THIS
  223            | QualifiedName '.' CLASS
  224            | PrimitiveType '.' CLASS

  225 MethodCall: MethodAccess '(' ArgumentList ')'
  226           | MethodAccess '(' ')'

  227 MethodAccess: ComplexPrimaryNoParenthesis
  228             | SpecialName
  229             | QualifiedName

  230 NewInner: NotJustName '.' NEW IDENTIFIER '(' ')'
  231         | NotJustName '.' NEW IDENTIFIER '(' ArgumentList ')'
  232         | QualifiedName '.' NEW IDENTIFIER '(' ')'
  233         | QualifiedName '.' NEW IDENTIFIER '(' ArgumentList ')'

  234 SpecialName: THIS
  235            | SUPER
  236            | JNULL

  237 ArgumentList: Expression
  238             | ArgumentList ',' Expression

  239 NewAllocationExpression: PlainNewAllocationExpression
  240                        | QualifiedName '.' PlainNewAllocationExpression

  241 PlainNewAllocationExpression: ArrayAllocationExpression
  242                             | ClassAllocationExpression
  243                             | ArrayAllocationExpression '{' '}'
  244                             | ClassAllocationExpression '{' '}'
  245                             | ArrayAllocationExpression '{' ArrayInitializers '}'
  246                             | ClassAllocationExpression '{' FieldDeclarations '}'

  247 ClassAllocationExpression: NEW TypeName '(' ArgumentList ')'
  248                          | NEW TypeName '(' ')'

  249 ArrayAllocationExpression: NEW TypeName DimExprs Dims
  250                          | NEW TypeName DimExprs
  251                          | NEW TypeName Dims

  252 DimExprs: DimExpr
  253         | DimExprs DimExpr

  254 DimExpr: '[' Expression ']'

  255 Dims: OP_DIM
  256     | Dims OP_DIM

  257 PostfixExpression: PrimaryExpression
  258                  | RealPostfixExpression

  259 RealPostfixExpression: PostfixExpression OP_INC
  260                      | PostfixExpression OP_DEC

  261 UnaryExpression: OP_INC UnaryExpression
  262                | OP_DEC UnaryExpression
  263                | ArithmeticUnaryOperator CastExpression
  264                | LogicalUnaryExpression

  265 LogicalUnaryExpression: PostfixExpression
  266                       | LogicalUnaryOperator UnaryExpression

  267 LogicalUnaryOperator: '~'
  268                     | '!'

  269 ArithmeticUnaryOperator: '+'
  270                        | '-'

  271 CastExpression: UnaryExpression
  272               | '(' PrimitiveTypeExpression ')' CastExpression
  273               | '(' ClassTypeExpression ')' CastExpression
  274               | '(' Expression ')' LogicalUnaryExpression

  275 PrimitiveTypeExpression: PrimitiveType
  276                        | PrimitiveType Dims

  277 ClassTypeExpression: QualifiedName Dims

  278 MultiplicativeExpression: CastExpression
  279                         | MultiplicativeExpression '*' CastExpression
  280                         | MultiplicativeExpression '/' CastExpression
  281                         | MultiplicativeExpression '%' CastExpression

  282 AdditiveExpression: MultiplicativeExpression
  283                   | AdditiveExpression '+' MultiplicativeExpression
  284                   | AdditiveExpression '-' MultiplicativeExpression

  285 ShiftExpression: AdditiveExpression
  286                | ShiftExpression OP_SHL AdditiveExpression
  287                | ShiftExpression OP_SHR AdditiveExpression
  288                | ShiftExpression OP_SHRR AdditiveExpression

  289 RelationalExpression: ShiftExpression
  290                     | RelationalExpression '<' ShiftExpression
  291                     | RelationalExpression '>' ShiftExpression
  292                     | RelationalExpression OP_LE ShiftExpression
  293                     | RelationalExpression OP_GE ShiftExpression
  294                     | RelationalExpression INSTANCEOF TypeSpecifier

  295 EqualityExpression: RelationalExpression
  296                   | EqualityExpression OP_EQ RelationalExpression
  297                   | EqualityExpression OP_NE RelationalExpression

  298 AndExpression: EqualityExpression
  299              | AndExpression '&' EqualityExpression

  300 ExclusiveOrExpression: AndExpression
  301                      | ExclusiveOrExpression '^' AndExpression

  302 InclusiveOrExpression: ExclusiveOrExpression
  303                      | InclusiveOrExpression '|' ExclusiveOrExpression

  304 ConditionalAndExpression: InclusiveOrExpression
  305                         | ConditionalAndExpression OP_LAND InclusiveOrExpression

  306 ConditionalOrExpression: ConditionalAndExpression
  307                        | ConditionalOrExpression OP_LOR ConditionalAndExpression

  308 ConditionalExpression: ConditionalOrExpression
  309                      | ConditionalOrExpression '?' Expression ':' ConditionalExpression

  310 AssignmentExpression: ConditionalExpression
  311                     | UnaryExpression AssignmentOperator AssignmentExpression

  312 AssignmentOperator: '='
  313                   | ASS_MUL
  314                   | ASS_DIV
  315                   | ASS_MOD
  316                   | ASS_ADD
  317                   | ASS_SUB
  318                   | ASS_SHL
  319                   | ASS_SHR
  320                   | ASS_SHRR
  321                   | ASS_AND
  322                   | ASS_XOR
  323                   | ASS_OR

  324 Expression: AssignmentExpression

  325 ConstantExpression: ConditionalExpression


Terminals, with rules where they appear

ENDF (0) 0 19 43 45 47 100 101 102 103 122 123 124 125 129 130 132
    133 140 142 143
'!' (33) 268
'%' (37) 281
'&' (38) 299
'(' (40) 104 105 106 107 126 127 160 166 167 168 169 170 171 172 173
    189 196 197 204 225 226 230 231 232 233 247 248 272 273 274
')' (41) 104 106 126 127 160 166 167 168 169 170 171 172 173 189 196
    197 204 225 226 230 231 232 233 247 248 272 273 274
'*' (42) 39 279
'+' (43) 269 283
',' (44) 6 88 95 109 181 238
'-' (45) 270 284
'.' (46) 39 41 220 221 222 223 224 230 231 232 233 240
'/' (47) 280
':' (58) 162 163 164 173 309
';' (59) 17 18 78 117 149 150 153 161 170 174 176 177 178 182 183 184
    185 186 187 188
'<' (60) 290
'=' (61) 90 312
'>' (62) 291
'?' (63) 309
'[' (91) 218 219 254
']' (93) 218 219 254
'^' (94) 301
'{' (123) 42 43 44 45 92 93 100 101 102 103 122 123 124 125 129 130
    132 133 137 138 143 243 244 245 246
'|' (124) 303
'}' (125) 42 44 46 48 92 93 137 138 139 141 243 244 245 246
'~' (126) 267
error (256) 28 35 37 46 47 57 58 84 105 107 139 140 141 142 148
ABSTRACT (258) 61
ANNOTATION (259)
BOOLEAN (260) 7
BREAK (261) 182 183
BYTE (262) 9
BYVALUE (263)
CASE (264) 163
CAST (265)
CATCH (266) 196 197
CHAR (267) 8
CLASS (268) 71 223 224
CONST (269)
CONTINUE (270) 184 185
DEFAULT (271) 164
DO (272) 170
DOUBLE (273) 14
ELSE (274) 167
EXTENDS (275) 134
ERROR (276)
STATEMENT (277)
FINAL (278) 62 111 150
FINALLY (279) 198
FLOAT (280) 13
FOR (281) 171 172 173
FUTURE (282)
GENERIC (283)
GOTO (284)
IF (285) 166 167
IMPLEMENTS (286) 73
IMPORT (287) 38 39
INNER (288)
INSTANCEOF (289) 294
INT (290) 11
INTERFACE (291) 72
LONG (292) 12
NATIVE (293) 69
NEW (294) 230 231 232 233 247 248 249 250 251
JNULL (295) 236
OPERATOR (296)
OUTER (297)
PACKAGE (298) 27 28
PRIVATE (299) 65
PROTECTED (300) 64
PUBLIC (301) 63
PRINT (302) 160
REST (303)
RETURN (304) 186 187
STRICTFP (305)
SHORT (306) 10
STATIC (307) 66 128 129 130
SUPER (308) 235
SWITCH (309) 168
SYNCHRONIZED (310) 70 189
STRING (311) 16
THIS (312) 222 234
THROW (313) 188
THROWS (314) 114
TRANSIENT (315) 67
TRY (316) 190 191 192
VAR (317)
VOID (318) 15
VOLATILE (319) 68
METHOD (320)
WHILE (321) 169 170
OP_INC (322) 259 261
OP_DEC (323) 260 262
OP_SHL (324) 286
OP_SHR (325) 287
OP_SHRR (326) 288
OP_GE (327) 293
OP_LE (328) 292
OP_EQ (329) 296
OP_NE (330) 297
OP_LAND (331) 305
OP_LOR (332) 307
OP_DIM (333) 113 255 256
ASS_MUL (334) 313
ASS_DIV (335) 314
ASS_MOD (336) 315
ASS_ADD (337) 316
ASS_SUB (338) 317
ASS_SHL (339) 318
ASS_SHR (340) 319
ASS_SHRR (341) 320
ASS_AND (342) 321
ASS_XOR (343) 322
ASS_OR (344) 323
IDENTIFIER (345) 40 41 49 50 51 52 53 54 55 56 112 126 127 162 173
    182 184 196 220 221 230 231 232 233
BOOLLIT (346) 217
FIELD (347)
INT_LITERAL (348) 211
LONG_LITERAL (349) 212
FLOAT_LITERAL (350) 214
CHAR_LITERAL (351) 216
STRING_LITERAL (352) 215
DOUBLE_LITERAL (353) 213
QualifiedNameId (354)
IfStmt (355)


Nonterminals, with rules where they appear

$accept (125)
    on left: 0
TypeSpecifier (126)
    on left: 1 2, on right: 85 86 96 97 98 99 100 101 102 103 110 111
    149 150 173 196 197 294
TypeName (127)
    on left: 3 4, on right: 1 2 247 248 249 250 251
ClassNameList (128)
    on left: 5 6, on right: 6 73 114 134
PrimitiveType (129)
    on left: 7 8 9 10 11 12 13 14 15 16, on right: 3 224 275 276
SemiColons (130)
    on left: 17 18, on right: 18 27 32 38 39 77
CompilationUnit (131)
    on left: 19, on right: 0
ProgramFile (132)
    on left: 20 21 22 23 24 25 26, on right: 19
PackageStatement (133)
    on left: 27 28, on right: 20 21 22 24
TypeDeclarations (134)
    on left: 29 30, on right: 20 22 23 26 30
TypeDeclarationOptSemi (135)
    on left: 31 32 33, on right: 29 30
ImportStatements (136)
    on left: 34 35 36 37, on right: 20 21 23 25 36 37
ImportStatement (137)
    on left: 38 39, on right: 34 36
QualifiedName (138)
    on left: 40 41, on right: 4 5 6 27 38 39 41 199 218 222 223 229
    232 233 240 277
TypeDeclaration (139)
    on left: 42 43 44 45 46 47 48, on right: 31 32 83
ClassHeader (140)
    on left: 49 50 51 52 53 54 55 56 57 58, on right: 33 42 43 44 45
    46 47 48
Modifiers (141)
    on left: 59 60, on right: 49 50 51 53 57 60 85 96 97 101 102 118
    119 122 123
Modifier (142)
    on left: 61 62 63 64 65 66 67 68 69 70, on right: 59 60
ClassWord (143)
    on left: 71 72, on right: 49 50 51 52 53 54 55 56 57 58
Interfaces (144)
    on left: 73, on right: 49 51 52 55
FieldDeclarations (145)
    on left: 74 75, on right: 42 43 46 47 75 246
FieldDeclarationOptSemi (146)
    on left: 76 77, on right: 74 75
FieldDeclaration (147)
    on left: 78 79 80 81 82 83 84, on right: 76 77
FieldVariableDeclaration (148)
    on left: 85 86, on right: 78
VariableDeclarators (149)
    on left: 87 88, on right: 85 86 88 149 150
VariableDeclarator (150)
    on left: 89 90, on right: 87 88 110 111
VariableInitializer (151)
    on left: 91 92 93, on right: 90 94 95
ArrayInitializers (152)
    on left: 94 95, on right: 93 95 245
MethodDeclaration (153)
    on left: 96 97 98 99 100 101 102 103, on right: 79
MethodDeclarator (154)
    on left: 104 105 106 107, on right: 96 97 98 99 100 101 102 103
ParameterList (155)
    on left: 108 109, on right: 104 105 109 126
Parameter (156)
    on left: 110 111, on right: 108 109
DeclaratorName (157)
    on left: 112 113, on right: 89 90 104 105 106 107 113
Throws (158)
    on left: 114, on right: 96 98 102 103 118 120 122 124
MethodBody (159)
    on left: 115 116 117, on right: 96 97 98 99
ConstructorDeclaration (160)
    on left: 118 119 120 121 122 123 124 125, on right: 80
ConstructorDeclarator (161)
    on left: 126 127, on right: 118 119 120 121 122 123 124 125
StaticInitializer (162)
    on left: 128 129 130, on right: 81
NonStaticInitializer (163)
    on left: 131 132 133, on right: 82
Extends (164)
    on left: 134, on right: 49 50 52 54
AnyBlock (165)
    on left: 135 136, on right: 118 119 120 121
Block (166)
    on left: 137 138, on right: 115 128 131 135 158 168 190 191 192
    195 198
WrongBlock (167)
    on left: 139 140 141 142 143, on right: 116 136
LocalVariableDeclarationsAndStatements (168)
    on left: 144 145, on right: 100 101 102 103 122 123 124 125 130
    133 137 139 140 145
LocalVariableDeclarationOrStatement (169)
    on left: 146 147 148, on right: 144 145
LocalVariableDeclarationStatement (170)
    on left: 149 150, on right: 146 175
Statement (171)
    on left: 151 152 153 154 155 156 157 158 159, on right: 147 166
    167 169 170 171 172 173 189
PrintStatement (172)
    on left: 160, on right: 159
EmptyStatement (173)
    on left: 161, on right: 151
LabelStatement (174)
    on left: 162 163 164, on right: 152
ExpressionStatement (175)
    on left: 165, on right: 153 180 181
SelectionStatement (176)
    on left: 166 167 168, on right: 154
IterationStatement (177)
    on left: 169 170 171 172 173, on right: 155
ForInit (178)
    on left: 174 175 176, on right: 171 172
ForExpr (179)
    on left: 177 178, on right: 171 172
ForIncr (180)
    on left: 179, on right: 171
ExpressionStatements (181)
    on left: 180 181, on right: 174 179 181
JumpStatement (182)
    on left: 182 183 184 185 186 187 188, on right: 156
GuardingStatement (183)
    on left: 189 190 191 192, on right: 157
Catches (184)
    on left: 193 194, on right: 191 192 194
Catch (185)
    on left: 195, on right: 193 194
CatchHeader (186)
    on left: 196 197, on right: 195
Finally (187)
    on left: 198, on right: 190 192
PrimaryExpression (188)
    on left: 199 200, on right: 257
NotJustName (189)
    on left: 201 202 203, on right: 200 220 230 231
ComplexPrimary (190)
    on left: 204 205, on right: 203 219
ComplexPrimaryNoParenthesis (191)
    on left: 206 207 208 209 210, on right: 205 227
Literals (192)
    on left: 211 212 213 214 215 216 217, on right: 206
ArrayAccess (193)
    on left: 218 219, on right: 207
FieldAccess (194)
    on left: 220 221 222 223 224, on right: 208
MethodCall (195)
    on left: 225 226, on right: 209
MethodAccess (196)
    on left: 227 228 229, on right: 225 226
NewInner (197)
    on left: 230 231 232 233, on right: 210
SpecialName (198)
    on left: 234 235 236, on right: 201 228
ArgumentList (199)
    on left: 237 238, on right: 225 231 233 238 247
NewAllocationExpression (200)
    on left: 239 240, on right: 202
PlainNewAllocationExpression (201)
    on left: 241 242 243 244 245 246, on right: 239 240
ClassAllocationExpression (202)
    on left: 247 248, on right: 242 244 246
ArrayAllocationExpression (203)
    on left: 249 250 251, on right: 241 243 245
DimExprs (204)
    on left: 252 253, on right: 249 250 253
DimExpr (205)
    on left: 254, on right: 252 253
Dims (206)
    on left: 255 256, on right: 2 249 251 256 276 277
PostfixExpression (207)
    on left: 257 258, on right: 259 260 265
RealPostfixExpression (208)
    on left: 259 260, on right: 221 258
UnaryExpression (209)
    on left: 261 262 263 264, on right: 261 262 266 271 311
LogicalUnaryExpression (210)
    on left: 265 266, on right: 264 274
LogicalUnaryOperator (211)
    on left: 267 268, on right: 266
ArithmeticUnaryOperator (212)
    on left: 269 270, on right: 263
CastExpression (213)
    on left: 271 272 273 274, on right: 263 272 273 278 279 280 281
PrimitiveTypeExpression (214)
    on left: 275 276, on right: 272
ClassTypeExpression (215)
    on left: 277, on right: 273
MultiplicativeExpression (216)
    on left: 278 279 280 281, on right: 279 280 281 282 283 284
AdditiveExpression (217)
    on left: 282 283 284, on right: 283 284 285 286 287 288
ShiftExpression (218)
    on left: 285 286 287 288, on right: 286 287 288 289 290 291 292
    293
RelationalExpression (219)
    on left: 289 290 291 292 293 294, on right: 290 291 292 293 294
    295 296 297
EqualityExpression (220)
    on left: 295 296 297, on right: 296 297 298 299
AndExpression (221)
    on left: 298 299, on right: 299 300 301
ExclusiveOrExpression (222)
    on left: 300 301, on right: 301 302 303
InclusiveOrExpression (223)
    on left: 302 303, on right: 303 304 305
ConditionalAndExpression (224)
    on left: 304 305, on right: 305 306 307
ConditionalOrExpression (225)
    on left: 306 307, on right: 307 308 309
ConditionalExpression (226)
    on left: 308 309, on right: 309 310 325
AssignmentExpression (227)
    on left: 310 311, on right: 311 324
AssignmentOperator (228)
    on left: 312 313 314 315 316 317 318 319 320 321 322 323,
    on right: 311
Expression (229)
    on left: 324, on right: 91 160 165 166 167 168 169 170 173 177
    186 188 189 204 218 219 237 238 254 274 309
ConstantExpression (230)
    on left: 325, on right: 163


state 0

    0 $accept: . CompilationUnit ENDF

    error         shift, and go to state 1
    ABSTRACT      shift, and go to state 2
    CLASS         shift, and go to state 3
    FINAL         shift, and go to state 4
    IMPORT        shift, and go to state 5
    INTERFACE     shift, and go to state 6
    NATIVE        shift, and go to state 7
    PACKAGE       shift, and go to state 8
    PRIVATE       shift, and go to state 9
    PROTECTED     shift, and go to state 10
    PUBLIC        shift, and go to state 11
    STATIC        shift, and go to state 12
    SYNCHRONIZED  shift, and go to state 13
    TRANSIENT     shift, and go to state 14
    VOLATILE      shift, and go to state 15

    CompilationUnit         go to state 16
    ProgramFile             go to state 17
    PackageStatement        go to state 18
    TypeDeclarations        go to state 19
    TypeDeclarationOptSemi  go to state 20
    ImportStatements        go to state 21
    ImportStatement         go to state 22
    TypeDeclaration         go to state 23
    ClassHeader             go to state 24
    Modifiers               go to state 25
    Modifier                go to state 26
    ClassWord               go to state 27


state 1

   35 ImportStatements: error .

    $default  reduce using rule 35 (ImportStatements)


state 2

   61 Modifier: ABSTRACT .

    $default  reduce using rule 61 (Modifier)


state 3

   71 ClassWord: CLASS .

    $default  reduce using rule 71 (ClassWord)


state 4

   62 Modifier: FINAL .

    $default  reduce using rule 62 (Modifier)


state 5

   38 ImportStatement: IMPORT . QualifiedName SemiColons
   39                | IMPORT . QualifiedName '.' '*' SemiColons

    IDENTIFIER  shift, and go to state 28

    QualifiedName  go to state 29


state 6

   72 ClassWord: INTERFACE .

    $default  reduce using rule 72 (ClassWord)


state 7

   69 Modifier: NATIVE .

    $default  reduce using rule 69 (Modifier)


state 8

   27 PackageStatement: PACKAGE . QualifiedName SemiColons
   28                 | PACKAGE . error

    error       shift, and go to state 30
    IDENTIFIER  shift, and go to state 28

    QualifiedName  go to state 31


state 9

   65 Modifier: PRIVATE .

    $default  reduce using rule 65 (Modifier)


state 10

   64 Modifier: PROTECTED .

    $default  reduce using rule 64 (Modifier)


state 11

   63 Modifier: PUBLIC .

    $default  reduce using rule 63 (Modifier)


state 12

   66 Modifier: STATIC .

    $default  reduce using rule 66 (Modifier)


state 13

   70 Modifier: SYNCHRONIZED .

    $default  reduce using rule 70 (Modifier)


state 14

   67 Modifier: TRANSIENT .

    $default  reduce using rule 67 (Modifier)


state 15

   68 Modifier: VOLATILE .

    $default  reduce using rule 68 (Modifier)


state 16

    0 $accept: CompilationUnit . ENDF

    ENDF  shift, and go to state 32


state 17

   19 CompilationUnit: ProgramFile . ENDF

    ENDF  shift, and go to state 33


state 18

   20 ProgramFile: PackageStatement . ImportStatements TypeDeclarations
   21            | PackageStatement . ImportStatements
   22            | PackageStatement . TypeDeclarations
   24            | PackageStatement .

    error         shift, and go to state 1
    ABSTRACT      shift, and go to state 2
    CLASS         shift, and go to state 3
    FINAL         shift, and go to state 4
    IMPORT        shift, and go to state 5
    INTERFACE     shift, and go to state 6
    NATIVE        shift, and go to state 7
    PRIVATE       shift, and go to state 9
    PROTECTED     shift, and go to state 10
    PUBLIC        shift, and go to state 11
    STATIC        shift, and go to state 12
    SYNCHRONIZED  shift, and go to state 13
    TRANSIENT     shift, and go to state 14
    VOLATILE      shift, and go to state 15

    ENDF  reduce using rule 24 (ProgramFile)

    TypeDeclarations        go to state 34
    TypeDeclarationOptSemi  go to state 20
    ImportStatements        go to state 35
    ImportStatement         go to state 22
    TypeDeclaration         go to state 23
    ClassHeader             go to state 24
    Modifiers               go to state 25
    Modifier                go to state 26
    ClassWord               go to state 27


state 19

   26 ProgramFile: TypeDeclarations .
   30 TypeDeclarations: TypeDeclarations . TypeDeclarationOptSemi

    ABSTRACT      shift, and go to state 2
    CLASS         shift, and go to state 3
    FINAL         shift, and go to state 4
    INTERFACE     shift, and go to state 6
    NATIVE        shift, and go to state 7
    PRIVATE       shift, and go to state 9
    PROTECTED     shift, and go to state 10
    PUBLIC        shift, and go to state 11
    STATIC        shift, and go to state 12
    SYNCHRONIZED  shift, and go to state 13
    TRANSIENT     shift, and go to state 14
    VOLATILE      shift, and go to state 15

    $default  reduce using rule 26 (ProgramFile)

    TypeDeclarationOptSemi  go to state 36
    TypeDeclaration         go to state 23
    ClassHeader             go to state 24
    Modifiers               go to state 25
    Modifier                go to state 26
    ClassWord               go to state 27


state 20

   29 TypeDeclarations: TypeDeclarationOptSemi .

    $default  reduce using rule 29 (TypeDeclarations)


state 21

   23 ProgramFile: ImportStatements . TypeDeclarations
   25            | ImportStatements .
   36 ImportStatements: ImportStatements . ImportStatement
   37                 | ImportStatements . error

    error         shift, and go to state 37
    ABSTRACT      shift, and go to state 2
    CLASS         shift, and go to state 3
    FINAL         shift, and go to state 4
    IMPORT        shift, and go to state 5
    INTERFACE     shift, and go to state 6
    NATIVE        shift, and go to state 7
    PRIVATE       shift, and go to state 9
    PROTECTED     shift, and go to state 10
    PUBLIC        shift, and go to state 11
    STATIC        shift, and go to state 12
    SYNCHRONIZED  shift, and go to state 13
    TRANSIENT     shift, and go to state 14
    VOLATILE      shift, and go to state 15

    ENDF  reduce using rule 25 (ProgramFile)

    TypeDeclarations        go to state 38
    TypeDeclarationOptSemi  go to state 20
    ImportStatement         go to state 39
    TypeDeclaration         go to state 23
    ClassHeader             go to state 24
    Modifiers               go to state 25
    Modifier                go to state 26
    ClassWord               go to state 27


state 22

   34 ImportStatements: ImportStatement .

    $default  reduce using rule 34 (ImportStatements)


state 23

   31 TypeDeclarationOptSemi: TypeDeclaration .
   32                       | TypeDeclaration . SemiColons

    ';'  shift, and go to state 40

    $default  reduce using rule 31 (TypeDeclarationOptSemi)

    SemiColons  go to state 41


state 24
